# WasmEdge

./: CMakeLists.txt
include/common/: statistics.h
include/executor/: executor.h
lib/aot/: compiler.cpp
plugin_test/: libwasmedgePluginWasiOCR.dylib  libwasmedgePluginWasmEdgeImage.dylib
plugins/: CMakeLists.txt
plugins/wasi_ocr/: CMakeLists.txt  wasiocrbase.h  wasiocrenv.cpp  wasiocrenv.h  wasiocrfunc.cpp  wasiocrfunc.h  wasiocrmodule.cpp  wasiocrmodule.h
